# mp3Rename

./: .gitmodules  CMakeLists.txt  Makefile  README.md  mp3Rename.kdev4
app/: CMakeLists.txt  main.cc
configured/: config.hpp.in
jenkins/: Jenkinsfile
src/my_lib/: CMakeLists.txt  mp3CharConversion.cpp  mp3CharConversion.hpp  mp3Tags.cpp  mp3Tags.hpp  my_lib.cc  my_lib.h
